# FlagGems

./: .clang-format  .coverage.rc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  =0.11  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_cn.md  Contributing.md  LICENSE  MAINTAINERS.md  MANIFEST.in  OperatorList.md  Qwen2-7B_CPU_Inference_Guide.md  Qwen2-7B_CPU_vllm_Inference_Guide.md  Qwen3-0.6B_CPU_Inference_Guide.md  README.md  README_cn.md  SECURITY.md  __init__.py  addmm.py  bmm.py  build_flaggems.sh  clean_flaggems.sh  coverage.xml  cumsum.py  demo.py  dropout.py  gelu.py  install_flaggems.sh  layernorm.py  libentry.py  matmul.py  mkdocs.yml  pyproject.toml  pytest.ini  relu.py  (+12 more)
.ci/: precheckin.pipeline
.ci/docker/: Dockerfile-single-stage  ci-docker-installer.tgz
.ci/pytorch/: build.sh  checkout.sh  common.sh  pinned_pytorch_commit.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ask-a-question.yml  bug-report.yml  feature-request.yml
.github/workflows/: blas-op-test.yaml  ci-temp-model-test.yaml  code-format-check.yml  code_scan.yaml  gems-cpp-extension.yaml  gems-test-on-hopper.yaml  gems-test-on-metax.yaml  jingding-model-test.yaml  jingding-op-unit-test.yaml  jiuding-python-coverage.yaml  mkdocs.yaml  model-test.yaml  (+11 more)
benchmark/: attri_util.py  benchmark_for_models.py  conftest.py  core_shapes.yaml  op_configs.py  performance_flagperf.py  performance_keyops.py  performance_utils.py  run_all_tests.sh  run_weekly_tests.sh  summary_for_plot.py  test_all.sh  test_angle_ops.py  test_attention_perf.py  test_binary_pointwise_perf.py  test_blas_perf.py  test_convolution_perf.py  test_distribution_perf.py  test_experimental_perf.py  test_fused_perf.py  test_generic_pointwise_perf.py  test_modes_perf.py  test_norm_perf.py  test_perf_back.py  test_perf_ops.py  test_pointwise_perf.py  test_reduction_perf.py  test_select_and_slice_perf.py  test_special_perf.py  test_tensor_concat_perf.py  test_tensor_constructor_perf.py  test_topk_softmax_perf.py  test_unary_pointwise_perf.py
cmake/: Config.cmake.in  Dependencies.cmake  FindTorch.cmake  Options.cmake  Settings.cmake
ctests/: CMakeLists.txt  test_triton_add.cpp  test_triton_argmax.cpp  test_triton_blas.cpp  test_triton_bmm.cpp  test_triton_cat.cpp  test_triton_contiguous.cpp  test_triton_div.cpp  test_triton_embedding.cpp  test_triton_exponential_.cpp  test_triton_fill.cpp  test_triton_flash_attn_varlen.cpp  test_triton_norm.cpp  test_triton_pointwise.cpp  test_triton_reduction.cpp  test_triton_reshape_and_cache.cpp  test_triton_reshape_and_cache_flash.cpp  test_triton_rope.cpp  test_triton_rwkv_ka_fusion.cpp  test_triton_rwkv_mm_sparsity.cpp  test_triton_silu_and_mul.cpp  test_triton_softmax.cpp  test_triton_sort.cpp  test_triton_special.cpp  test_triton_sum.cpp  test_triton_tensor_constructor.cpp  test_triton_zeros.cpp
doc/: build flaggems with c extensions.md  build_flaggems_with_c_extensions.md
docs/: add_a_cpp_wrapper.md  build_flaggems_with_c_extensions.md  code_countribution.md  ctest_in_flaggems.md  get_start_with_flaggems.md  hello_world.md  how_to_use_flaggems.md  index.md  installation.md  libcache_db_backend.md  operator_list.md  pointwise_dynamic.md  pytest_in_flaggems.md
examples/: be_pt2_compliant.py  compile_flaggems.py  deepseek_with_vllm_test.py  hello_world.py  integration_gems_with_vllm.py  model_bert_test.py  model_llama_test.py  model_llava_test.py  model_qwen2_7b_test.py  model_qwen2_7b_time.py  model_qwen2_7b_vllm_test.py  model_qwen3_0_6b_test.py  model_with_vllm_test.py  peihang.py  pretune.py  run_all_tests.sh  use_cpp_runtime.py
lib/: CMakeLists.txt  add.cpp  addmm.cpp  argmax.cpp  bmm.cpp  cat.cpp  contiguous.cpp  div.cpp  embedding.cpp  exponential_.cpp  fill.cpp  flash_attn_varlen_func.cpp  fused_add_rms_norm.cpp  max.cpp  mm.cpp  nonzero.cpp  pointwise_dynamic.cpp  reshape_and_cache_flash.cpp  rms_norm.cpp  rotary_embedding.cpp  rwkv_ka_fusion.cpp  rwkv_mm_sparsity.cpp  silu_and_mul.cpp  softmax.cpp  sort.cpp  sum.cpp  topk.cpp  utils.cpp  zeros.cpp
maca-test-tools/: readlog.py  readme.md  run_accuracy_test.sh  run_perf_test.sh
modules_tests/: module_test_util.py  test_gems_activation.py  test_gems_attn.py  test_gems_norm.py  test_gems_normalization.py  test_gems_rotary_embedding.py  test_utils.py
src/: __init__.py  addmm.py  bmm.py  cumsum.py  demo.py  dropout.py  gelu.py  mm.py  softmax.py
src/flag_gems/csrc/: CMakeLists.txt  aten_patch.cpp  aten_patch.h  cstub.cpp
test/: bert_model_test.py
tests/: accuracy_utils.py  conftest.py  ks_tests.py  mt_test_entry.py  result.json  run_all_tests.sh  run_all_tests_parallel.sh  run_all_tests_single.sh  test.py  test.sh  test_50_ops.py  test_acc_ops.py  test_angle_ops.py  test_attention_ops.py  test_back_ops.py  test_big_shapes.py  test_binary_pointwise_ops.py  test_blas_ops.py  test_concat_and_cache_mla.py  test_convolution_ops.py  test_distribution_ops.py  test_experimental_ops.py  test_general_reduction_ops.py  test_hello.py  test_libentry.py  test_moe_sum.py  test_named_ops.py  test_norm_ops.py  test_pointwise_dynamic.py  test_pointwise_type_promotion.py  test_quant.py  test_reduction_ops.py  test_shape_utils.py  test_special_ops.py  test_specific_ops.py  test_tensor_constructor_ops.py  test_tensor_ops.py  test_tensor_wrapper.py  test_topk_softmax.py  test_torch_musa_unsupport.py  (+2 more)
tmp_patch/: README.md  get_board_run_time.py  performance_utils.py  run_engtest.sh
tools/: blas-op-test.sh  coverage.sh  coverage_diff.py  coverage_lines.py  gpu_check.sh  jit_func_position.py  model-test.sh  op-test-quick-cpu.sh  op-unit-test.sh  op-utils-test.sh  pointwise-op-test.sh  pull_request.py  pytest_mark_check.sh  python_coverage.py  reduction-op-test.sh  run_command.sh  special-op-test.sh
triton_src/: addmm.py  argmax.py  axpy.py  binary_add.py  binary_add_stride.py  bmm.py  cat_copy.py  contiguous.py  div.py  embedding.py  fill.py  fused_add_rms_norm.py  max.py  mm.py  nonzero.py  rms_norm.py  rotary_embedding.py  silu_and_mul.py  softmax.py  sort.py  sum.py  topk.py  zeros.py
(+1000 files in other folders)
