[project]
name = "flag_gems"
version = "2.0"
authors = [
    {name = "Zhixin Li", email = "strongspoon@outlook.com"},
    {name = "Tongxin Bai", email = "waffle.bai@gmail.com"},
    {name = "Yuming Huang", email = "jokmingwong@gmail.com"},
    {name = "Feiyu Chen", email = "iclementine@outlook.com"},
]
description = "FlagGems is a function library written in Triton."
readme = {file= "README.md", content-type="text/markdown"}
requires-python = ">=3.8"
license = {text = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "triton>=2.2.0",
    "torch>=2.2.0",
    "transformers>=4.40.2"
]

[project.optional-dependencies]
test = [
    "pytest>=7.1.0",
    "numpy>=1.26",
    "scipy>=1.14"
]

[project.urls]
homepage = "https://github.com/FlagOpen/FlagGems"

[tool.coverage.run]
omit = [
    "*/.flaggems/*",
    "*/usr/lib/*",
    ]
